# events-nmx-classify

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Jenkinsfile.disabled  LICENSE.txt  README.md  common.pri  conanfile.txt  contributors.txt  read.py  tpcClassify.pro  tpcc.pro  tpcg
analyze/: analyze.pro  main.cpp
browse/: AggregateReview.cpp  AggregateReview.h  AggregateReview.ui  Analyzer.cpp  Analyzer.h  Analyzer.ui  BoxesModel.cpp  BoxesModel.h  Browser.cpp  Browser.h  SearchBox.cpp  SearchBox.h  SearchBox.ui  SearchList.cpp  SearchList.h  SearchList.ui  SpecialDelegate.cpp  Subhist.cpp  Subhist.h  TableSettings.h  ViewEvent.cpp  ViewEvent.h  ViewRecord.h  browse.pro  doFit.h  main.cpp  qt_util.cpp  tpcc.cpp  tpcc.h  tpcc.ui
cmake/: BoostLibraryConfig.cmake  CompilerConfig.cmake  DirsOf.cmake  EnsureBuildType.cmake  InstallConfig.cmake  TestCoverage.cmake
cmd/: CLParser.cpp  CLParser.h  Makefile  Makefile.Debug  Makefile.Release  Timer.h  cmd.pro  main.cpp
common/: CLParser.h  Timer.h  common.pri  histogram.h  histogram_h5.h
gui/: Analyzer.cpp  Analyzer.h  Analyzer.ui  BoxesModel.cpp  BoxesModel.h  CustomLogger.cpp  Histogram.cpp  Histogram.h  Makefile  Makefile.Debug  Makefile.Release  SpecialDelegate.cpp  SpecialDelegate.h  TableSettings.cpp  ThreadAnalysis.cpp  ThreadAnalysis.h  ThreadClassify.cpp  ThreadClassify.h  ViewEvent.cpp  ViewEvent.h  ViewEvent.ui  ViewRecord.cpp  ViewRecord.h  ViewRecord.ui  analysis_thread.cpp  analysis_thread.h  analyzer.cpp  analyzer.h  analyzer.ui  custom_logger.cpp  custom_logger.h  custom_timer.h  event_viewer.cpp  event_viewer.h  event_viewer.ui  gui.pro  main.cpp  qt_util.cpp  qt_util.h  record_viewer.cpp  (+6 more)
h5cc/: H5CC_DataSet.cpp  H5CC_DataSet.h  H5CC_DataSet.tpp  H5CC_File.h  H5CC_Group.h  H5CC_Group.tpp  (+4 more)
source/: CMakeLists.txt
source/analyze/: CMakeLists.txt  main.cpp
source/browse/: AggregateReview.cpp  AggregateReview.h  AggregateReview.ui  Analyzer.cpp  Analyzer.h  Analyzer.ui  BoxesModel.cpp  BoxesModel.h  Browser.cpp  Browser.h  Browser.ui  CMakeLists.txt  DialogVary.cpp  DialogVary.h  DialogVary.ui  ExceptionUtil.h  SearchBox.h  SearchList.cpp  SearchList.h  SearchList.ui  SpecialDelegate.cpp  SpecialDelegate.h  Subhist.cpp  Subhist.h  TableSettings.cpp  TableSettings.h  ThreadClassify.cpp  ViewEvent.cpp  ViewEvent.h  ViewEvent.ui  ViewRecord.cpp  ViewRecord.h  doFit.cpp  doFit.h  qt_util.cpp  qt_util.h
source/browse/ColorWidgets/: PreviewHue.cpp  PreviewHue.h
source/browse/plots/: qp_2d.cpp  qp_2d.h  qp_appearance.cpp  qp_generic.cpp  qp_generic.h  qp_multi1d.cpp  qp_multi1d.h
source/browse/resources/: tpccres.qrc
source/cluster/: CMakeLists.txt  Clusterer.cpp  Clusterer.h  EventNMX.cpp  EventNMX.h  main.cpp
source/common/: CLParser.h  CMakeLists.txt  CustomLogger.cpp  CustomLogger.h  ExceptionUtil.h  Filesystem.cpp  Filesystem.h  JsonH5.cpp  JsonH5.h  JsonH5.tpp  custom_timer.h  doFit.cpp  histogram_h5.cpp  histogram_h5.h  progbar.h
source/common/h5cc/: H5CC_Common.h  H5CC_DataSet.cpp  H5CC_DataSet.h  H5CC_DataSet.tpp  H5CC_Enum.cpp  H5CC_Enum.h  H5CC_Enum.tpp  H5CC_Exception.h  H5CC_File.cpp  H5CC_File.h  H5CC_Group.h  H5CC_Group.tpp  H5CC_Location.h  H5CC_Location.tpp  H5CC_Shape.h  H5CC_Space.cpp  H5CC_Space.h  H5CC_Types.h  H5CC_Variant.cpp  H5CC_Variant.h
source/common/nmx/: Analysis.cpp  Analysis.h  BoundedNumeric.h  BoundedNumeric.tpp  Clusterer.cpp  Clusterer.h  Enum.cpp  Enum.h  Event.cpp  Event.h  EventVMM.cpp  EventVMM.h  Eventlet.cpp  File.cpp  File.h  FileAPV.cpp  FileAPV.h  FileAnalysis.cpp  FileAnalysis.h  FileClustered.cpp  FileClustered.h  FileVMM.cpp  FileVMM.h  Filter.cpp  Filter.h  Metric.h  MetricSet.h  MultipleChoice.h  Plane.cpp  Plane.h  PlanePerspective.cpp  PlanePerspective.h  Raw.h  RawAPV.cpp  RawAPV.h  RawClustered.cpp  RawClustered.h  RawVMM.cpp  RawVMM.h  Record.cpp  (+8 more)
source/common/nmx/pipeline/: ChronoQ.cpp  ChronoQ.h  Cluster.cpp  Clusterer.cpp  Clusterer.h  Eventlet.cpp  Eventlet.h  LatencyQ.h  SimpleEvent.cpp  SimpleEvent.h
source/convert/: Reader.h  ReaderROOT.cpp  ReaderRawAPV.cpp  ReaderRawVMM.cpp  ReaderRawVMM.h  main.cpp
source/convert_apv/: CMakeLists.txt  Reader.h  ReaderROOT.cpp  ReaderROOT.h  ReaderRawAPV.cpp  ReaderRawAPV.h  main.cpp
source/convert_vmm/: CMakeLists.txt  ReaderRawVMM.cpp  ReaderRawVMM.h  Time.cpp  TimeStamp.h  main.cpp
source/hists/: CMakeLists.txt  main.cpp
source/merits/: CMakeLists.txt
source/uncluster/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/analyze/: CMakeLists.txt  main.cpp
src/browse/: AggregateReview.cpp  AggregateReview.ui  Analyzer.cpp  Analyzer.ui  BoxesModel.cpp  Browser.cpp  Browser.ui  CMakeLists.txt  DialogVary.cpp  SearchBox.cpp  SearchBox.h  SearchList.cpp  SpecialDelegate.cpp  SpecialDelegate.h  TableSettings.cpp  ViewEvent.h  ViewEvent.ui  ViewRecord.ui  main.cpp
src/browse/resources/: tpccres.qrc
src/cluster/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Filesystem.h  custom_timer.h  doFit.cpp  doFit.h  h5json.cpp  h5json.h  histogram_h5.cpp  histogram_h5.h
src/common/nmx/: Analysis.cpp  Analysis.h  File.cpp  File.h  Filter.cpp  Filter.h  Metric.cpp  Metric.h  MetricSet.cpp  MetricSet.h  Plane.h  PlanePerspective.cpp  PlanePerspective.h  RawAPV.cpp  RawAPV.h  RawClustered.cpp  RawClustered.h  RawVMM.cpp  RawVMM.h  Settings.cpp  Settings.h  Strip.cpp
src/common/nmx/pipeline/: ChronoQ.h  Cluster.h  Eventlet.cpp  Eventlet.h  EventletPacket.cpp  EventletPacket.h  LatencyQ.cpp  LatencyQ.h  Microcluster.cpp  Microcluster.h  MicroclusterPool.cpp  MicroclusterPool.h  SimpleEvent.h
src/convert_apv/: CMakeLists.txt  Reader.h  ReaderROOT.cpp  ReaderRawAPV.cpp  main.cpp
src/convert_vmm/: CMakeLists.txt  Geometry.cpp  Geometry.h  ReaderRawVMM.h  TimeStamp.cpp  main.cpp
src/dump/: CMakeLists.txt  main.cpp
src/hists/: CMakeLists.txt  main.cpp
src/merits/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  MicroclusterPoolTest.cpp  MicroclusterTest.cpp  RawAPV.cpp  RawClustered.cpp  RawVMM.cpp  SettingsTest.cpp  h5jsonTest.cpp
src/uncluster/: CMakeLists.txt  main.cpp
(+155 files in other folders)
